--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm">
-          <img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" height="250vmin" alt="Logo ITBA-IEEE">
+          <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" height="250vmin" alt="Logo ITBA-IEEE">
         </div>
         <div class="col-sm">
           <div class="whiteRoundedBlock" id="mainTxt">{{ 'HOME.DESC' | translate }}</div>
@@ -33,7 +33,7 @@
   
       <!-- Educacion -->
       <mdb-card>
-        <mdb-card-img src="./../../assets/image/education.JPG" alt="Foto de Curso de Python"></mdb-card-img>
+        <mdb-card-img src="https://i.ibb.co/6mLnt2t/education.jpg" alt="Foto de Curso de Python"></mdb-card-img>
         <mdb-card-body>
   
           <mdb-card-title>
@@ -47,7 +47,7 @@
   
       <!-- Competencia -->
       <mdb-card>
-        <mdb-card-img src="./../../assets/image/competition.jpg" alt="Foto de Competencia de programacion"></mdb-card-img>
+        <mdb-card-img src="https://i.ibb.co/YX53J4W/competition.jpg" alt="Foto de Competencia de programacion"></mdb-card-img>
         <mdb-card-body>
   
           <mdb-card-title>
@@ -61,7 +61,7 @@
   
       <!-- Contacto -->
       <mdb-card>
-        <mdb-card-img src="./../../assets/image/contacts.JPG" alt="Foto durante ICIT2020"></mdb-card-img>
+        <mdb-card-img src="https://i.ibb.co/2hsYPdQ/contacts.jpg" alt="Foto durante ICIT2020"></mdb-card-img>
         <mdb-card-body>
   
           <mdb-card-title>
@@ -83,7 +83,7 @@
     <!--IEEExtreme-->
     <mdb-card>
       <div class="view overlay waves-light" mdbWavesEffect>
-        <mdb-card-img src="./../../assets/image/ieee-extreme.jpg" alt="Competicion IEEExtreme"></mdb-card-img>
+        <mdb-card-img src="https://i.ibb.co/YNBZxNs/ieee-extreme.jpg" alt="Foto de competicion IEEExtreme"></mdb-card-img>
         <a><div class="mask rgba-white-slight"></div></a>
       </div>
 
@@ -109,7 +109,7 @@
     <!--Clases de Pyhton-->
     <mdb-card>
       <div class="view overlay waves-light" mdbWavesEffect>
-        <mdb-card-img src="./../../assets/image/cursopython.jpg" alt="Cursos de Python"></mdb-card-img>
+        <mdb-card-img src="https://i.ibb.co/q1QyW01/cursopython.jpg" alt="Foto de los cursos de Python"></mdb-card-img>
         <a><div class="mask rgba-white-slight"></div></a>
       </div>
 
