--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -2,6 +2,8 @@
     <mat-tab label="2020">
         <br>
         <mat-accordion>
+            <!-- Photos at imgbb -->
+
             <!-- CD -->
             <mat-expansion-panel class="mat-elevation-z0">
                 <mat-expansion-panel-header>
@@ -14,7 +16,7 @@
                         <!-- Ariel Nowik -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Ariel Nowik"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/YX5j6nw/arielnowik.jpg" alt="Foto de Ariel Nowik"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -32,7 +34,7 @@
                         <!-- Dante Kieniguiel -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Dante Kieniguiel"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/YX5j6nw/arielnowik.jpg" alt="Foto de Dante Kieniguiel"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -50,7 +52,7 @@
                         <!-- Franco Moriconi -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Franco Moriconi"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/YX5j6nw/arielnowik.jpg" alt="Foto de Franco Moriconi"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -68,7 +70,7 @@
                         <!-- Carola Pedrosa -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/carolapedrosa.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/K9SbCTJ/carolapedrosa.jpg" alt="Foto de Carola Pedrosa"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -99,7 +101,7 @@
                         <!-- Lucas Vidmar -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/lucasvidmar.jpg" alt="Foto de Lucas Vidmar"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/8P3trjg/lucasvidmar.jpg" alt="Foto de Lucas Vidmar"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -117,7 +119,7 @@
                         <!-- Alex Moldovan -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/alexmoldovan.jpg" alt="Foto de Alex Moldovan"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/5rf7cSJ/alexmoldovan.jpg" alt="Foto de Alex Moldovan"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -133,7 +135,7 @@
                         <!-- Sofia Petrozzino -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/sofiapetrozzino.jpg" alt="Foto de Sofia Petrozzino"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/1RMpjj0/sofiapetrozzino.jpg" alt="Foto de Sofia Petrozzino"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -151,7 +153,7 @@
                         <!-- Aldana Bruno -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/aldanabruno.jpg" alt="Foto de Aldana Bruno"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/fMNMQHf/aldanabruno.jpg" alt="Foto de Aldana Bruno"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -169,7 +171,7 @@
                         <!-- Nicole Bartellini -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Nicole Bartellini"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Nicole Bartellini"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -198,7 +200,7 @@
                         <!-- Alan Mechoulam -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/alanmechoulam.jpg" alt="Foto de Alan Mechoulam"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/8B973Hk/alanmechoulam.jpg" alt="Foto de Alan Mechoulam"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -216,7 +218,7 @@
                         <!-- Candelaria Ruiz -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/candelariaruiz.jpg" alt="Foto de Candelaria Ruiz"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/zfT818s/candelariaruiz.jpg" alt="Foto de Candelaria Ruiz"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -234,7 +236,7 @@
                         <!-- Nicolás Trozzo -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Nicolás Trozzo"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Nicolás Trozzo"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -252,7 +254,7 @@
                         <!-- Juan Causse -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Juan Causse"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Juan Causse"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -283,7 +285,7 @@
                         <!-- Xi Lin -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Xi Lin"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Xi Lin"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -301,7 +303,7 @@
                         <!-- Gonzalo Rimini -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/gonzalorimini.jpg" alt="Foto de Gonzalo Rimini"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/nmg6jXQ/gonzalorimini.jpg" alt="Foto de Gonzalo Rimini"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -317,7 +319,7 @@
                         <!-- Olivia de Vicenti -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/oliviadevincenti.jpg" alt="Foto de Olivia de Vicenti"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/M5kk8JY/oliviadevincenti.jpg" alt="Foto de Olivia de Vicenti"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -333,7 +335,7 @@
                         <!-- Nicolás Pelayo -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/nicolaspelayo.jpg" alt="Foto de Nicolás Pelayo"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/HrqHtZV/nicolaspelayo.jpg" alt="Foto de Nicolás Pelayo"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -364,7 +366,7 @@
                         <!-- Matías Bergerman -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/matiasbergerman.jpg" alt="Foto de Matías Bergerman"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/rvWJBCt/matiasbergerman.jpg" alt="Foto de Matías Bergerman"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -382,7 +384,7 @@
                         <!-- Gonzalo Hirsch -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Gonzalo Hirsch"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Gonzalo Hirsch"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -400,7 +402,7 @@
                         <!-- Francisco Ledesma -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/franciscoledesma.jpg" alt="Foto de Francisco Ledesma"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/TvSzk6n/franciscoledesma.jpg" alt="Foto de Francisco Ledesma"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -418,7 +420,7 @@
                         <!-- Patricio Whittingslow -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Patricio Whittingslow"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/JkCmGXZ/patriciowhittingslow.jpg" alt="Foto de Patricio Whittingslow"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -436,7 +438,7 @@
                         <!-- Ignacio Villanueva -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="./../../assets/image/cardphotos/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
