--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,13 +2,13 @@
     <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img class="imgFooter" src="./../../assets/image/ieee_mb_white.png" alt="Logo IEEE" width="190vmin">
+            <img class="imgFooter" src="https://i.ibb.co/NYzCjqf/ieee-white.png" alt="Logo IEEE" width="190vmin">
           </div>
           <div class="imgFooter" class="col-sm">
-            <img src="./../../assets/image/Logo circular/IEEE-Logo-Darkest.png" width="100vmin">
+            <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" alt="Logo IEEE ITBA" width="100vmin">
           </div>
           <div class="imgFooter" class="col-sm">
-            <img src="./../../assets/image/Marca-ITBA-Color-Blanco-ALTA.png" alt="Logo ITBA" width="170vmin">
+            <img src="https://i.ibb.co/gvxWrd8/itba-white.png" alt="Logo ITBA" width="170vmin">
           </div>
         </div>
       </div>
