more photos and bug fixes

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -158,7 +158,7 @@
         <mdb-card-text>{{ 'HOME.WIE.TEXT' | translate }}</mdb-card-text>
   
         <a class="link-text">
-          <h5 class="waves-light" mdbWavesEffect>Ver más
+          <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
         </a>
@@ -169,7 +169,7 @@
     <!--Club de Programadores-->
     <mdb-card>
       <div class="view overlay waves-light" mdbWavesEffect>
-        <mdb-card-img src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%28131%29.jpg"></mdb-card-img>
+        <mdb-card-img src="https://i.ibb.co/XkZVrrz/progteam.jpg"></mdb-card-img>
         <a><div class="mask rgba-white-slight"></div></a>
       </div>
 
@@ -184,7 +184,7 @@
         <mdb-card-text>{{ 'HOME.PROGCLUB.TEXT' | translate }}</mdb-card-text>
   
         <a class="link-text">
-          <h5 class="waves-light" mdbWavesEffect>Ver más
+          <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
         </a>
