--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -34,7 +34,7 @@
                         <!-- Dante Kieniguiel -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/YX5j6nw/arielnowik.jpg" alt="Foto de Dante Kieniguiel"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/Z2YjBfn/dantekienigiel.jpg" alt="Foto de Dante Kieniguiel"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -171,7 +171,7 @@
                         <!-- Nicole Bartellini -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Nicole Bartellini"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/g429zc7/nicolebartellini.jpg" alt="Foto de Nicole Bartellini"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
