--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -21,6 +21,9 @@
           <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" height="250vmin" alt="Logo ITBA-IEEE">
         </div>
         <div class="col-sm">
+          <h1 id="logotext">ITBA<br>IEEE Student Chapter</h1>
+        </div>
+        <div class="col-sm">
           <div class="whiteRoundedBlock" id="mainTxt">{{ 'HOME.DESC' | translate }}</div>
         </div>
       </div>
