--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -52,7 +52,7 @@
                         <!-- Franco Moriconi -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/YX5j6nw/arielnowik.jpg" alt="Foto de Franco Moriconi"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/D7JsB7Q/francomoriconi.jpg" alt="Foto de Franco Moriconi"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -254,7 +254,7 @@
                         <!-- Juan Causse -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Juan Causse"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/QmVxzFT/juancausse.jpg" alt="Foto de Juan Causse"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -285,7 +285,7 @@
                         <!-- Xi Lin -->
                         <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Xi Lin"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/7zYkGtG/xilin.jpg" alt="Foto de Xi Lin"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
@@ -456,7 +456,7 @@
 
                 </div>
             </mat-expansion-panel>
-
+            
         </mat-accordion>
 
     </mat-tab>
