missing people commented

--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -160,11 +160,11 @@
 
         <mdb-card-text>{{ 'HOME.WIE.TEXT' | translate }}</mdb-card-text>
   
-        <a class="link-text">
+        <!-- <a class="link-text">
           <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
-        </a>
+        </a> -->
       </mdb-card-body>
 
     </mdb-card>
@@ -186,11 +186,11 @@
 
         <mdb-card-text>{{ 'HOME.PROGCLUB.TEXT' | translate }}</mdb-card-text>
   
-        <a class="link-text">
+        <!-- <a class="link-text">
           <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
             <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
           </h5>
-        </a>
+        </a> -->
       </mdb-card-body>
 
     </mdb-card>
