--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -234,7 +234,7 @@
                         </mdb-card>
 
                         <!-- Nicolás Trozzo -->
-                        <mdb-card>
+                        <!-- <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Nicolás Trozzo"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
@@ -242,14 +242,14 @@
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
                                 <h4 class="card-title"><strong>Nicolás Trozzo</strong></h4>
-                                <h5>{{ 'HOME.CARGO.ID.ASSISTANT' | translate }}</h5>
+                                <h5>{{ 'HOME.CARGO.ID.ASSISTANT' | translate }}</h5> -->
 
                                 <!-- Linkedin -->
-                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/rafael-nicolas-trozzo-b13877170/"><i class="fab fa-linkedin"></i></a>
+                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/rafael-nicolas-trozzo-b13877170/"><i class="fab fa-linkedin"></i></a> -->
                                 <!-- Mail -->
-                                <a mdbWavesEffect class="cardIcon" href="mailto:rtrozzo@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:rtrozzo@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
-                        </mdb-card>
+                        </mdb-card> -->
 
                         <!-- Juan Causse -->
                         <mdb-card>
@@ -382,7 +382,7 @@
                         </mdb-card>
 
                         <!-- Gonzalo Hirsch -->
-                        <mdb-card>
+                        <!-- <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Gonzalo Hirsch"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
@@ -390,14 +390,14 @@
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
                                 <h4 class="card-title"><strong>Gonzalo Hirsch</strong></h4>
-                                <h5>{{ 'HOME.CARGO.EDUCATION.TUTOR' | translate }}</h5>
+                                <h5>{{ 'HOME.CARGO.EDUCATION.TUTOR' | translate }}</h5> -->
 
                                 <!-- Linkedin -->
-                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/gonzalo-hirsch-5b4854155/"><i class="fab fa-linkedin"></i></a>
+                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/gonzalo-hirsch-5b4854155/"><i class="fab fa-linkedin"></i></a> -->
                                 <!-- Mail -->
-                                <a mdbWavesEffect class="cardIcon" href="mailto:ghirsch@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ghirsch@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
-                        </mdb-card>
+                        </mdb-card> -->
 
                         <!-- Francisco Ledesma -->
                         <mdb-card>
@@ -436,7 +436,7 @@
                         </mdb-card>
 
                         <!-- Ignacio Villanueva -->
-                        <mdb-card>
+                        <!-- <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
                                 <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Ignacio Villanueva"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
@@ -444,14 +444,14 @@
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
                                 <h4 class="card-title"><strong>Ignacio Villanueva</strong></h4>
-                                <h5>{{ 'HOME.CARGO.EDUCATION.RRPP' | translate }}</h5>
+                                <h5>{{ 'HOME.CARGO.EDUCATION.RRPP' | translate }}</h5> -->
 
                                 <!-- Linkedin -->
-                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a>
+                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/ignacio-villanueva-256541176/"><i class="fab fa-linkedin"></i></a> -->
                                 <!-- Mail -->
-                                <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ivillanueva@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
-                        </mdb-card>
+                        </mdb-card> -->
                     </div>
 
                 </div>
