added computer society card

--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -234,22 +234,22 @@
                         </mdb-card>
 
                         <!-- Nicolás Trozzo -->
-                        <!-- <mdb-card>
+                       <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Nicolás Trozzo"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/zHmgvX5/nicolastrozzo.jpg" alt="Foto de Nicolás Trozzo"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
                                 <h4 class="card-title"><strong>Nicolás Trozzo</strong></h4>
-                                <h5>{{ 'HOME.CARGO.ID.ASSISTANT' | translate }}</h5> -->
+                                <h5>{{ 'HOME.CARGO.ID.ASSISTANT' | translate }}</h5>
 
                                 <!-- Linkedin -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/rafael-nicolas-trozzo-b13877170/"><i class="fab fa-linkedin"></i></a> -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/rafael-nicolas-trozzo-b13877170/"><i class="fab fa-linkedin"></i></a>
                                 <!-- Mail -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:rtrozzo@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                               <a mdbWavesEffect class="cardIcon" href="mailto:rtrozzo@itba.edu.ar"><i class="fas fa-envelope"></i></a>
                             </mdb-card-body>
-                        </mdb-card> -->
+                        </mdb-card>
 
                         <!-- Juan Causse -->
                         <mdb-card>
@@ -382,22 +382,23 @@
                         </mdb-card>
 
                         <!-- Gonzalo Hirsch -->
-                        <!-- <mdb-card>
+                        <mdb-card>
                             <div class="view view-cascade overlay waves-light" mdbWavesEffect>
-                                <mdb-card-img src="https://i.ibb.co/vhNzbyR/arielnowik.jpg" alt="Foto de Gonzalo Hirsch"></mdb-card-img>
+                                <mdb-card-img src="https://i.ibb.co/tZ0ZyY3/gonzalohirsch.jpg" alt="Foto de Gonzalo Hirsch"></mdb-card-img>
                                 <a><div class="mask rgba-white-slight"></div></a>
                             </div>
 
                             <mdb-card-body cascade="true" class="text-center pb-0 px-0">
                                 <h4 class="card-title"><strong>Gonzalo Hirsch</strong></h4>
-                                <h5>{{ 'HOME.CARGO.EDUCATION.TUTOR' | translate }}</h5> -->
+                                <h5>{{ 'HOME.CARGO.EDUCATION.TUTOR' | translate }}</h5>
 
                                 <!-- Linkedin -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/gonzalo-hirsch-5b4854155/"><i class="fab fa-linkedin"></i></a> -->
+                                <a mdbWavesEffect class="cardIcon" href="https://www.linkedin.com/in/gonzalo-hirsch-5b4854155/"><i class="fab fa-linkedin"></i></a>
                                 <!-- Mail -->
-                                <!-- <a mdbWavesEffect class="cardIcon" href="mailto:ghirsch@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+                                <a mdbWavesEffect class="cardIcon" href="mailto:ghirsch@itba.edu.ar"><i class="fas fa-envelope"></i></a>
+
                             </mdb-card-body>
-                        </mdb-card> -->
+                        </mdb-card>
 
                         <!-- Francisco Ledesma -->
                         <mdb-card>
