--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -194,6 +194,33 @@
       </mdb-card-body>
 
     </mdb-card>
+
+    <!--Computer Society-->
+    <mdb-card>
+      <div class="view overlay waves-light" mdbWavesEffect>
+        <mdb-card-img src="https://i.ibb.co/QPcgkLJ/cs.jpg"></mdb-card-img>
+        <a><div class="mask rgba-white-slight"></div></a>
+      </div>
+
+      <mdb-card-body>
+
+        <mdb-card-title>
+          <h4>{{ 'HOME.CS.TITLE' | translate }}</h4>
+        </mdb-card-title>
+  
+        <hr>
+
+        <mdb-card-text>{{ 'HOME.CS.TEXT' | translate }}</mdb-card-text>
+  
+        <!-- <a class="link-text">
+          <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+            <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+          </h5>
+        </a> -->
+      </mdb-card-body>
+
+    </mdb-card>
+
     </div>
 
   </div>
