--- a/src/app/blog-content/blog-content.component.html
+++ b/src/app/blog-content/blog-content.component.html
@@ -1,10 +1,10 @@
 <div class="main-container" fxLayoutAlign="center center" fxLayout="row">
-    <div class="image">
-        <img class="logo-image-left" src="assets/image/Logo circular/IEEE-Logo-Dark.png">
-    </div>
-    <div class="title-container" fxLayoutAlign="center center" fxLayout="row">
-        <div class="title">IEEE ITBA</div>
-        <div class="title bold">Blog</div>
+
+    <div class="news-content" fxLayoutAlign="center center" fxLayout="column">
+        <div class="news-title">Noticia 1</div>
+        <div class="news-content">
+            Contenido
+        </div>
     </div>
     
 </div>
