agrgado base de datos para el blog

--- a/src/app/blog-content/blog-content.component.html
+++ b/src/app/blog-content/blog-content.component.html
@@ -1,10 +1,7 @@
-<div class="main-container" fxLayoutAlign="center center" fxLayout="row">
+<div class="main-container" fxLayoutAlign="center center" fxLayout="column">
 
-    <div class="news-content" fxLayoutAlign="center center" fxLayout="column">
-        <div class="news-title">Noticia 1</div>
-        <div class="news-content">
-            Contenido
-        </div>
-    </div>
+    <app-blog-entry *ngFor="let blogEntry of (blogData | async)" [newsItem]="blogEntry">
+
+    </app-blog-entry>
     
 </div>
