--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -2,7 +2,7 @@
     <app-blog-title>
 
     </app-blog-title>
-    <app-blog-content>
+    <app-blog-content [blogData]="newsData">
 
     </app-blog-content>
 </div>
