--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -17,8 +17,8 @@
   <div class="topbottomLine" id="home">
     <div class="container">
       <div class="row">
-        <div class="col-sm">
-          <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" height="250vmin" alt="Logo ITBA-IEEE">
+        <div class="col-sm"  fxLayoutAlign="center center" fxLayout="column">
+          <img src="https://i.ibb.co/kx22G8h/IEEE-Logo-Darkest.png" height="100vmin" alt="Logo ITBA-IEEE">
         </div>
         <div class="col-sm">
           <h1 id="logotext">ITBA<br>IEEE Student Chapter</h1>
